--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-helmet": "^6.1.9",
     "@types/react-slick": "^0.23.13"
   }
