--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+ 
+     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start:api": "json-server --watch src/components/data/db.json --port 3001"
