--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Onecommunn",
-  "name": "Onecommunn React App",
+  "short_name": "React DashBoard",
+  "name": "React DashBoard",
   "icons": [
     {
       "src": "favicon.ico",
